--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
         "format": "prettier --write --plugin-search-dir=. ."
     },
     "devDependencies": {
-        "@sveltejs/kit": "next",
-        "@types/cookie": "^0.4.0",
+        "@sveltejs/kit": "^1.0.0-next.120",
         "@typescript-eslint/eslint-plugin": "^4.19.0",
         "@typescript-eslint/parser": "^4.19.0",
         "autoprefixer": "^10.2.6",
@@ -24,16 +23,11 @@
         "prettier": "~2.2.1",
         "prettier-plugin-svelte": "^2.2.0",
         "sass": "^1.35.1",
-        "svelte": "^3.34.0",
+        "svelte": "^3.38.3",
         "svelte-check": "^2.0.0",
         "svelte-preprocess": "^4.7.3",
         "tslib": "^2.0.0",
         "typescript": "^4.0.0"
     },
-    "type": "module",
-    "dependencies": {
-        "@fontsource/fira-mono": "^4.2.2",
-        "@lukeed/uuid": "^2.0.0",
-        "cookie": "^0.4.1"
-    }
+    "type": "module"
 }
