add functionality to hero buttons, setup @sveltejs/adapter-node

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "format": "prettier --write --plugin-search-dir=. ."
     },
     "devDependencies": {
+        "@sveltejs/adapter-node": "^1.0.0-next.31",
         "@sveltejs/kit": "^1.0.0-next.120",
         "@typescript-eslint/eslint-plugin": "^4.19.0",
         "@typescript-eslint/parser": "^4.19.0",
