--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "format": "prettier --write --plugin-search-dir=. ."
     },
     "devDependencies": {
+        "@fluentui/svg-icons": "^1.1.135",
         "@sveltejs/adapter-node": "^1.0.0-next.31",
         "@sveltejs/kit": "^1.0.0-next.120",
         "@typescript-eslint/eslint-plugin": "^4.19.0",
