--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "devDependencies": {
         "@fluentui/svg-icons": "^1.1.135",
-        "@sveltejs/adapter-netlify": "^1.0.0-next.19",
+        "@sveltejs/adapter-vercel": "next",
         "@sveltejs/kit": "^1.0.0-next.120",
         "@typescript-eslint/eslint-plugin": "^4.19.0",
         "@typescript-eslint/parser": "^4.19.0",
