--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
         "tslib": "^2.0.0",
         "typescript": "^4.0.0"
     },
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "three": "^0.130.1"
+    }
 }
