--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
     },
     "devDependencies": {
         "@fluentui/svg-icons": "^1.1.135",
-        "@sveltejs/adapter-vercel": "next",
-        "@sveltejs/kit": "^1.0.0-next.120",
-        "@typescript-eslint/eslint-plugin": "^4.19.0",
-        "@typescript-eslint/parser": "^4.19.0",
-        "autoprefixer": "^10.2.6",
-        "eslint": "^7.22.0",
-        "eslint-config-prettier": "^8.1.0",
+        "@sveltejs/adapter-vercel": "^1.0.0-next.26",
+        "@sveltejs/kit": "^1.0.0-next.132",
+        "@typescript-eslint/eslint-plugin": "^4.28.4",
+        "@typescript-eslint/parser": "^4.28.4",
+        "autoprefixer": "^10.3.1",
+        "eslint": "^7.31.0",
+        "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-svelte3": "^3.2.0",
         "mdsvex": "^0.9.8",
         "postcss": "^8.3.5",
-        "prettier": "~2.2.1",
-        "prettier-plugin-svelte": "^2.2.0",
-        "sass": "^1.35.1",
+        "prettier": "~2.3.2",
+        "prettier-plugin-svelte": "^2.3.1",
+        "sass": "^1.35.2",
         "svelte": "^3.38.3",
-        "svelte-check": "^2.0.0",
-        "svelte-preprocess": "^4.7.3",
-        "tslib": "^2.0.0",
-        "typescript": "^4.0.0"
+        "svelte-check": "^2.2.3",
+        "svelte-preprocess": "^4.7.4",
+        "tslib": "^2.3.0",
+        "typescript": "^4.3.5"
     },
     "type": "module",
     "dependencies": {
