--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@typescript-eslint/eslint-plugin": "^4.28.4",
         "@typescript-eslint/parser": "^4.28.4",
         "autoprefixer": "^10.3.1",
+        "bezier-easing": "^2.1.0",
         "eslint": "^7.31.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-svelte3": "^3.2.0",
@@ -33,6 +34,7 @@
     },
     "type": "module",
     "dependencies": {
+        "prismjs": "^1.24.1",
         "three": "^0.130.1"
     }
 }
