--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "sass": "^1.35.2",
         "svelte": "^3.42.1",
         "svelte-check": "^2.2.3",
+        "svelte-highlight": "^3.2.0",
         "svelte-preprocess": "^4.7.4",
         "tslib": "^2.3.0",
         "typescript": "^4.3.5"
