--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "@fluentui/svg-icons": "^1.1.137",
         "@sveltejs/adapter-netlify": "^1.0.0-next.29",
         "@sveltejs/kit": "^1.0.0-next.158",
-        "@types/three": "^0.131.0",
         "@typescript-eslint/eslint-plugin": "^4.29.3",
         "@typescript-eslint/parser": "^4.29.3",
         "autoprefixer": "^10.3.3",
@@ -37,7 +36,5 @@
         "typescript": "^4.4.2"
     },
     "type": "module",
-    "dependencies": {
-        "three": "^0.132.2"
-    }
+    "dependencies": {}
 }
