--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
 	"useTabs": true,
 	"trailingComma": "none",
-	"printWidth": 100
+	"printWidth": 100,
+	"arrowParens": "avoid",
+	"semi": true,
+	"tabWidth": 4
 }
