--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,7 @@
 {
 	"useTabs": true,
-	"trailingComma": "none",
-	"printWidth": 100,
-	"arrowParens": "avoid",
+	"tabWidth": 4,
 	"semi": true,
-	"tabWidth": 4
+	"trailingComma": "none",
+	"arrowParens": "avoid"
 }
