--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"repository": "https://github.com/files-community/files",
 	"scripts": {
 		"dev": "svelte-kit dev",
+	        "prebuild": "test \"$CI\" = true && npx pnpm install -r --store=node_modules/.pnpm-store || echo skipping pnpm install",
 		"build": "svelte-kit build",
 		"preview": "svelte-kit preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
