--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  command = "npm i -g pnpm; pnpm run build"
+  command = "svelte-kit build"
   publish = "build/"
   functions = "functions/"
