--- a/package.json
+++ b/package.json
@@ -13,29 +13,29 @@
 	},
 	"devDependencies": {
 		"@fec/remark-a11y-emoji": "^3.1.0",
-		"@fluentui/svg-icons": "^1.1.139",
-		"@sveltejs/adapter-netlify": "^1.0.0-next.30",
-		"@sveltejs/kit": "^1.0.0-next.165",
-		"@typescript-eslint/eslint-plugin": "^4.31.0",
-		"@typescript-eslint/parser": "^4.31.0",
+		"@fluentui/svg-icons": "^1.1.141",
+		"@sveltejs/adapter-netlify": "^1.0.0-next.31",
+		"@sveltejs/kit": "^1.0.0-next.170",
+		"@typescript-eslint/eslint-plugin": "^4.31.2",
+		"@typescript-eslint/parser": "^4.31.2",
 		"autoprefixer": "^10.3.4",
 		"bezier-easing": "^2.1.0",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^3.2.0",
+		"eslint-plugin-svelte3": "^3.2.1",
 		"mdsvex": "^0.9.8",
 		"postcss": "^8.3.6",
-		"prettier": "~2.4.1",
+		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
 		"remark-gfm": "^2.0.0",
 		"remark-github": "^11.1.0",
 		"remark-slug": "^7.0.0",
-		"sass": "^1.39.0",
-		"svelte": "^3.42.4",
-		"svelte-check": "^2.2.5",
-		"svelte-preprocess": "^4.9.4",
+		"sass": "^1.41.1",
+		"svelte": "^3.42.6",
+		"svelte-check": "^2.2.6",
+		"svelte-preprocess": "^4.9.5",
 		"tslib": "^2.3.1",
-		"typescript": "^4.4.2"
+		"typescript": "^4.4.3"
 	},
 	"type": "module"
 }
