--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
 		"remark-gfm": "^2.0.0",
 		"remark-github": "^11.1.0",
 		"remark-slug": "^7.0.0",
-		"sass": "^1.41.1",
+		"sass": "^1.42.0",
 		"svelte": "^3.42.6",
 		"svelte-check": "^2.2.6",
+		"svelte-drag": "^1.3.1",
 		"svelte-preprocess": "^4.9.5",
 		"tslib": "^2.3.1",
 		"typescript": "^4.4.3"
