--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
 		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
+	"dependencies": {
+		"@fluentui/svg-icons": "^1.1.141"
+	},
 	"devDependencies": {
 		"@fec/remark-a11y-emoji": "^3.1.0",
-		"@fluentui/svg-icons": "^1.1.141",
 		"@sveltejs/adapter-netlify": "^1.0.0-next.31",
 		"@sveltejs/kit": "^1.0.0-next.175",
 		"@typescript-eslint/eslint-plugin": "^4.32.0",
