--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
 		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
-	"dependencies": {
-		"@fluentui/svg-icons": "^1.1.141"
-	},
 	"devDependencies": {
+		"@fluentui/svg-icons": "^1.1.141",
 		"@fec/remark-a11y-emoji": "^3.1.0",
 		"@sveltejs/adapter-netlify": "^1.0.0-next.31",
 		"@sveltejs/kit": "^1.0.0-next.175",
