Made the browsers dropdown required

--- a/.github/ISSUE_TEMPLATES/bug_report.yml
+++ b/.github/ISSUE_TEMPLATES/bug_report.yml
@@ -18,6 +18,8 @@ body:
         - Chrome
         - Safari
         - Microsoft Edge
+    validations:
+      required: true
   - type: textarea
     attributes:
       label: Description
