finish tabs showcase

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,7 @@
 			"$lib": ["src/lib/*", "src/lib/index"],
 			"$data/*": ["src/data/*"],
 			"$page-sections": ["src/page-sections/*", "src/page-sections/index"],
-			"$routes": ["src/routes/*"],
-			"$static": ["static/*"]
+			"$routes": ["src/routes/*"]
 		}
 	},
 	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
