--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,9 @@
 		"checkJs": true,
 		"paths": {
 			"$lib": ["src/lib/*", "src/lib/index"],
-			"$data/*": ["src/data/*"],
-			"$page-sections": ["src/page-sections/*", "src/page-sections/index"]
+			"$layout": ["src/layout/*", "src/layout/index"],
+			"$data": ["src/data/*"],
+			"$static/*": ["static/*"],
 		}
 	},
 	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
