Converted every CSS property in the site to logical properties. Capitalized "GitHub" correctly in the dropdown menu; The footer social icons are now imported using a relative path; Updated packages;
Signed-off-by: TheOnlyTails <theonlytails@theonlytails.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
 		"paths": {
 			"$lib": ["src/lib/*", "src/lib/index"],
 			"$layout": ["src/layout/*", "src/layout/index"],
-			"$data": ["src/data/*"],
+			"$data/*": ["src/data/*"],
 			"$static/*": ["static/*"],
 		}
 	},
