--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"eslint": "^8.2.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"husky": "^7.0.4",
 		"mdsvex": "^0.9.8",
 		"postcss": "^8.3.11",
 		"prettier": "^2.4.1",
