--- a/package.json
+++ b/package.json
@@ -9,33 +9,35 @@
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --write --plugin-search-dir=. ."
+		"format": "prettier --write --plugin-search-dir=. .",
+		"prepare": "husky install"
 	},
 	"devDependencies": {
-		"@fluentui/svg-icons": "^1.1.141",
 		"@fec/remark-a11y-emoji": "^3.1.0",
-		"@sveltejs/adapter-netlify": "^1.0.0-next.31",
-		"@sveltejs/kit": "^1.0.0-next.175",
-		"@typescript-eslint/eslint-plugin": "^5.0.0",
-		"@typescript-eslint/parser": "^5.2.0",
-		"autoprefixer": "^10.3.6",
-		"eslint": "^8.0.0",
+		"@fluentui/svg-icons": "^1.1.147",
+		"@sveltejs/adapter-netlify": "^1.0.0-next.35",
+		"@sveltejs/kit": "^1.0.0-next.195",
+		"@typescript-eslint/eslint-plugin": "^5.3.0",
+		"@typescript-eslint/parser": "^5.3.0",
+		"autoprefixer": "^10.4.0",
+		"eslint": "^8.2.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"husky": "^7.0.4",
 		"mdsvex": "^0.9.8",
-		"postcss": "^8.3.8",
+		"postcss": "^8.3.11",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
-		"remark-gfm": "^3.0.0",
-		"remark-github": "^11.1.0",
-		"remark-slug": "^7.0.0",
-		"sass": "^1.42.1",
-		"svelte": "^3.43.0",
-		"svelte-check": "^2.2.6",
-		"svelte-drag": "^2.0.0",
-		"svelte-preprocess": "^4.9.5",
+		"remark-gfm": "^3.0.1",
+		"remark-github": "^11.2.1",
+		"remark-slug": "^7.0.1",
+		"sass": "^1.43.4",
+		"svelte": "^3.44.1",
+		"svelte-check": "^2.2.8",
+		"svelte-drag": "^2.0.2",
+		"svelte-preprocess": "^4.9.8",
 		"tslib": "^2.3.1",
-		"typescript": "^4.4.3"
+		"typescript": "^4.4.4"
 	},
 	"type": "module"
 }
