--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.3.0",
 		"@typescript-eslint/parser": "^5.3.0",
 		"autoprefixer": "^10.4.0",
+		"cssnano": "^5.0.10",
 		"eslint": "^8.2.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
