--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,9 @@
 
 [functions]
   node_bundler = "esbuild"
+  
+[headers]
+  for = "/*.webmanifest"
+  [headers.values]
+    Content-Type = "application/xml appinstaller"
+    Content-Type = "application/vns.ms-appx appxbundle appx"
