--- a/package.json
+++ b/package.json
@@ -14,31 +14,31 @@
 	},
 	"devDependencies": {
 		"@fec/remark-a11y-emoji": "^3.1.0",
-		"@fluentui/svg-icons": "^1.1.150",
-		"@sveltejs/adapter-netlify": "^1.0.0-next.35",
-		"@sveltejs/kit": "^1.0.0-next.196",
-		"@typescript-eslint/eslint-plugin": "^5.3.1",
-		"@typescript-eslint/parser": "^5.3.1",
-		"autoprefixer": "^10.4.0",
-		"cssnano": "^5.0.10",
-		"eslint": "^8.2.0",
+		"@fluentui/svg-icons": "^1.1.154",
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/kit": "^1.0.0-next.211",
+		"@typescript-eslint/eslint-plugin": "^5.8.1",
+		"@typescript-eslint/parser": "^5.8.1",
+		"autoprefixer": "^10.4.1",
+		"cssnano": "^5.0.14",
+		"eslint": "^8.5.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
 		"husky": "^7.0.4",
 		"mdsvex": "^0.9.8",
-		"postcss": "^8.3.11",
-		"prettier": "^2.4.1",
-		"prettier-plugin-svelte": "^2.4.0",
+		"postcss": "^8.4.5",
+		"prettier": "^2.5.1",
+		"prettier-plugin-svelte": "^2.5.1",
 		"remark-gfm": "^3.0.1",
-		"remark-github": "^11.2.1",
+		"remark-github": "^11.2.2",
 		"remark-slug": "^7.0.1",
-		"sass": "^1.43.4",
-		"svelte": "^3.44.1",
-		"svelte-check": "^2.2.8",
-		"svelte-drag": "^2.2.0",
-		"svelte-preprocess": "^4.9.8",
+		"sass": "^1.45.2",
+		"svelte": "^3.44.3",
+		"svelte-check": "^2.2.11",
+		"svelte-drag": "^2.4.0",
+		"svelte-preprocess": "^4.10.1",
 		"tslib": "^2.3.1",
-		"typescript": "^4.4.4"
+		"typescript": "^4.5.4"
 	},
 	"type": "module"
 }
