--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
 	"useTabs": true,
 	"semi": true,
 	"trailingComma": "none",
-	"arrowParens": "avoid"
+	"arrowParens": "avoid",
+	"endOfLine": "lf"
 }
