--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 		"sass": "^1.49.0",
 		"svelte": "^3.46.2",
 		"svelte-check": "^2.3.0",
-		"svelte-drag": "^2.4.0",
+		"@neodrag/svelte": "^1.0.2",
 		"svelte-preprocess": "^4.10.2",
 		"tslib": "^2.3.1",
 		"typescript": "^4.5.5"
