--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --write --plugin-search-dir=. .",
-		"prepare": "husky install"
+		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
 		"@fec/remark-a11y-emoji": "^3.1.0",
@@ -26,7 +25,6 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.4.0",
 		"fluent-svelte": "^1.3.3",
-		"husky": "^7.0.4",
 		"postcss": "^8.4.6",
 		"mdsvex": "^0.10.5",
 		"postcss-media-minmax": "^5.0.0",
