--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
 	"devDependencies": {
 		"@fec/remark-a11y-emoji": "^3.1.0",
 		"@fluentui/svg-icons": "^1.1.160",
-		"@neodrag/svelte": "^1.1.2",
-		"@sveltejs/adapter-netlify": "^1.0.0-next.44",
+		"@neodrag/svelte": "^1.1.3",
+		"@sveltejs/adapter-vercel": "^1.0.0-next.40",
 		"@sveltejs/kit": "^1.0.0-next.260",
-		"@typescript-eslint/eslint-plugin": "^5.10.2",
-		"@typescript-eslint/parser": "^5.10.2",
+		"@typescript-eslint/eslint-plugin": "^5.11.0",
+		"@typescript-eslint/parser": "^5.11.0",
 		"autoprefixer": "^10.4.2",
 		"cssnano": "^5.0.17",
 		"eslint": "^8.8.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.4.0",
 		"fluent-svelte": "^1.3.3",
-		"postcss": "^8.4.6",
 		"mdsvex": "^0.10.5",
+		"postcss": "^8.4.6",
 		"postcss-media-minmax": "^5.0.0",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.6.0",
