--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --write --plugin-search-dir=. ."
+		"format": "prettier --write --plugin-search-dir=. .",
+		"typesafe-i18n": "typesafe-i18n"
 	},
 	"devDependencies": {
 		"@fec/remark-a11y-emoji": "^3.1.0",
@@ -40,5 +41,8 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.5.5"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"typesafe-i18n": "^5.4.3"
+	}
 }
