--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,59 +1,13 @@
 {
+	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
-		"moduleResolution": "node",
-		"module": "es2020",
-		"lib": [
-			"es2020",
-			"dom"
-		],
-		"target": "es2019",
-		/**
-        svelte-preprocess cannot figure out whether you have a value or a type, so tell TypeScript
-        to enforce using \`import type\` instead of \`import\` for Types.
-        */
-		"importsNotUsedAsValues": "error",
-		"isolatedModules": true,
-		"resolveJsonModule": true,
-		/**
-        To have warnings/errors of the Svelte compiler at the correct position,
-        enable source maps by default.
-        */
-		"sourceMap": true,
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true,
-		"baseUrl": ".",
 		"allowJs": true,
 		"checkJs": true,
-		"paths": {
-			"$lib": [
-				"src/lib"
-			],
-			"$lib/*": [
-				"src/lib/*"
-			],
-			"$layout": [
-				"src/layout",
-			],
-			"$layout/*": [
-				"src/layout/*"
-			],
-			"$data": [
-				"src/data"
-			],
-			"$data/*": [
-				"src/data/*"
-			],
-			"$static/*": [
-				"static/*"
-			],
-		}
-	},
-	"include": [
-		"src/**/*.d.ts",
-		"src/**/*.js",
-		"src/**/*.ts",
-		"src/**/*.svelte"
-	],
-	"extends": "./.svelte-kit/tsconfig.json"
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true,
+		"skipLibCheck": true,
+		"sourceMap": true,
+		"strict": true
+	}
 }
