--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 		"svelte-check": "^2.7.0",
 		"svelte-preprocess": "^4.10.6",
 		"tslib": "^2.4.0",
-		"typescript": "^4.6.3"
+		"typescript": "^4.6.3",
+		"vite": "^3.0.3"
 	},
 	"type": "module"
 }
