fix(deps): made sure sveltekit and the vercel adapter are always up to date
Signed-off-by: TheOnlyTails <theonlytails@theonlytails.com>

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		"@fec/remark-a11y-emoji": "^3.1.0",
 		"@fluentui/svg-icons": "^1.1.167",
 		"@neodrag/svelte": "^1.1.4",
-		"@sveltejs/adapter-vercel": "^1.0.0-next.49",
-		"@sveltejs/kit": "^1.0.0-next.320",
+		"@sveltejs/adapter-vercel": "next",
+		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^5.20.0",
 		"@typescript-eslint/parser": "^5.20.0",
 		"autoprefixer": "^10.4.4",
