--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "0.0.1",
 	"repository": "https://github.com/files-community/files",
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
+		"dev": "vite dev",
+		"build": "vite build",
 		"preview": "svelte-kit preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -13,32 +13,33 @@
 	},
 	"devDependencies": {
 		"@fec/remark-a11y-emoji": "^3.1.0",
-		"@fluentui/svg-icons": "^1.1.160",
-		"@neodrag/svelte": "^1.1.3",
-		"@sveltejs/adapter-vercel": "^1.0.0-next.40",
-		"@sveltejs/kit": "^1.0.0-next.260",
-		"@typescript-eslint/eslint-plugin": "^5.11.0",
-		"@typescript-eslint/parser": "^5.11.0",
-		"autoprefixer": "^10.4.2",
-		"cssnano": "^5.0.17",
-		"eslint": "^8.8.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^3.4.0",
-		"fluent-svelte": "^1.3.3",
-		"mdsvex": "^0.10.5",
-		"postcss": "^8.4.6",
+		"@fluentui/svg-icons": "^1.1.179",
+		"@neodrag/svelte": "^1.2.3",
+		"@sveltejs/adapter-vercel": "next",
+		"@sveltejs/kit": "next",
+		"@typescript-eslint/eslint-plugin": "^5.35.1",
+		"@typescript-eslint/parser": "^5.35.1",
+		"autoprefixer": "^10.4.8",
+		"cssnano": "^5.1.13",
+		"eslint": "^8.22.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte3": "^3.4.1",
+		"fluent-svelte": "^1.6.0",
+		"mdsvex": "^0.10.6",
+		"postcss": "^8.4.16",
 		"postcss-media-minmax": "^5.0.0",
-		"prettier": "^2.5.1",
-		"prettier-plugin-svelte": "^2.6.0",
+		"prettier": "^2.7.1",
+		"prettier-plugin-svelte": "^2.7.0",
 		"remark-gfm": "^3.0.1",
-		"remark-github": "^11.2.2",
+		"remark-github": "^11.2.4",
 		"remark-slug": "^7.0.1",
-		"sass": "^1.49.7",
-		"svelte": "^3.46.4",
-		"svelte-check": "^2.4.3",
-		"svelte-preprocess": "^4.10.2",
-		"tslib": "^2.3.1",
-		"typescript": "^4.5.5"
+		"sass": "^1.54.5",
+		"svelte": "^3.49.0",
+		"svelte-check": "^2.8.1",
+		"svelte-preprocess": "^4.10.7",
+		"tslib": "^2.4.0",
+		"typescript": "^4.8.2",
+		"vite": "^3.0.9"
 	},
 	"type": "module"
 }
