--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"@fluentui/svg-icons": "^1.1.190",
 		"@neodrag/svelte": "^1.2.4",
 		"@sveltejs/adapter-vercel": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"@typescript-eslint/parser": "^5.46.1",
 		"autoprefixer": "^10.4.13",
