Added an RSS feed (`/blog/feed.rss`) fixed the share links blog metadata searching is now based on `route.id`, not `url.pathname` updated deps

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@fec/remark-a11y-emoji": "^3.1.0",
 		"@fluentui/svg-icons": "^1.1.190",
 		"@neodrag/svelte": "^1.2.4",
-		"@sveltejs/adapter-vercel": "next",
+		"@sveltejs/adapter-vercel": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"@typescript-eslint/parser": "^5.46.1",
@@ -23,7 +23,7 @@
 		"cssnano": "^5.1.14",
 		"eslint": "^8.29.0",
 		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^3.4.1",
+		"eslint-plugin-svelte3": "^4.0.0",
 		"fluent-svelte": "^1.6.0",
 		"mdsvex": "^0.10.6",
 		"postcss": "^8.4.20",
@@ -36,7 +36,7 @@
 		"sass": "^1.56.2",
 		"svelte": "^3.55.0",
 		"svelte-check": "^2.10.2",
-		"svelte-preprocess": "^4.10.7",
+		"svelte-preprocess": "^5.0.0",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.4",
 		"vite": "^4.0.1"
