--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-	"files.associations": { "*.svx": "markdown" }
+	"i18n-ally.localesPaths": ["src/i18n/locales"],
+	"i18n-ally.keystyle": "nested"
 }
