--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
 		"@fluentui/svg-icons": "^1.1.190",
 		"@neodrag/svelte": "^1.2.4",
 		"@sveltejs/adapter-vercel": "^1.0.0",
-		"@sveltejs/kit": "^1.0.0",
-		"@typescript-eslint/eslint-plugin": "^5.46.1",
-		"@typescript-eslint/parser": "^5.46.1",
+		"@sveltejs/kit": "^1.0.1",
+		"@typescript-eslint/eslint-plugin": "^5.47.1",
+		"@typescript-eslint/parser": "^5.47.1",
 		"autoprefixer": "^10.4.13",
 		"cssnano": "^5.1.14",
-		"eslint": "^8.29.0",
+		"eslint": "^8.30.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"fluent-svelte": "^1.6.0",
@@ -33,13 +33,14 @@
 		"remark-gfm": "^3.0.1",
 		"remark-github": "^11.2.4",
 		"remark-slug": "^7.0.1",
-		"sass": "^1.56.2",
+		"sass": "^1.57.1",
 		"svelte": "^3.55.0",
-		"svelte-check": "^2.10.2",
+		"svelte-check": "^3.0.1",
+		"svelte-i18n": "^3.6.0",
 		"svelte-preprocess": "^5.0.0",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.4",
-		"vite": "^4.0.1"
+		"vite": "^4.0.3"
 	},
 	"type": "module"
 }
