--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /src/i18n/locales/*.json
-    translation: /src/i18n/locales/%locale%/%original_file_name%
+    translation: /src/i18n/locales/%original_file_name%
