--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
 		"typescript": "^4.9.4",
 		"vite": "^4.0.4"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"pnpm": "^7.25.0"
+	}
 }
