--- a/package.json
+++ b/package.json
@@ -42,8 +42,5 @@
 		"typescript": "^4.9.4",
 		"vite": "^4.0.4"
 	},
-	"type": "module",
-	"dependencies": {
-		"pnpm": "^7.25.0"
-	}
+	"type": "module"
 }
