--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
 	"useTabs": true,
-	"semi": true,
-	"trailingComma": "none",
 	"arrowParens": "avoid",
-	"endOfLine": "lf"
+	"plugins": ["prettier-plugin-svelte"],
+	"pluginSearchDirs": ["."],
+	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
