Added a recommended extension for the project: the iconify extension by https://github.com/antfu

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-	"recommendations": ["svelte.svelte-vscode", "lokalise.i18n-ally"]
+	"recommendations": ["svelte.svelte-vscode", "lokalise.i18n-ally", "antfu.iconify"]
 }
