added a note in the README about the precommit hook made the command in `lint-staged` the same as in the `format` script

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
 		"vite": "^4.3.3"
 	},
 	"lint-staged": {
-		"*": "prettier --write"
+		"*": "prettier --write --plugin-search-dir=."
 	},
 	"type": "module"
 }
