--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"cssnano": "^6.0.0",
 		"eslint": "^8.39.0",
 		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.27.2",
 		"fluent-svelte": "^1.6.0",
 		"husky": "^8.0.3",
 		"lint-staged": "^13.2.2",
