--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"cssnano": "^6.0.1",
 		"eslint": "^8.43.0",
 		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte": "^2.31.1",
+		"eslint-plugin-svelte": "^2.32.2",
 		"fluent-svelte": "^1.6.0",
 		"husky": "^8.0.3",
 		"lint-staged": "^13.2.3",
@@ -37,17 +37,32 @@
 		"remark-github": "^11.2.4",
 		"remark-slug": "^7.0.1",
 		"sass": "^1.63.6",
-		"svelte": "^3.59.2",
+		"svelte": "^4.0.1",
 		"svelte-check": "^3.4.4",
 		"svelte-i18n": "^3.6.0",
 		"svelte-preprocess": "^5.0.4",
 		"tslib": "^2.6.0",
-		"typescript": "^5.1.3",
+		"typescript": "^5.1.6",
 		"unplugin-icons": "0.16.3",
 		"vite": "^4.3.9"
 	},
 	"lint-staged": {
 		"*": "prettier --write --ignore-unknown --plugin-search-dir=."
+	},
+	"pnpm": {
+		"peerDependencyRules": {
+			"allowedVersions": {
+				"svelte-i18n>svelte": "^4.0.0"
+			}
+		}
+	},
+	"overrides": {
+		"svelte-i18n": {
+			"svelte": "^4.0.0"
+		}
+	},
+	"engines": {
+		"pnpm": ">=8"
 	},
 	"type": "module"
 }
