--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,3 +12,7 @@ updates:
       separator: "/"
     reviewers:
       - "theonlytails"
+    groups:
+      dependencies:
+        patterns:
+          - "*"
