--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,5 @@
 {
 	"useTabs": true,
 	"arrowParens": "avoid",
-	"plugins": ["prettier-plugin-svelte"],
-	"pluginSearchDirs": ["."],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"plugins": ["prettier-plugin-svelte"]
 }
