Added previews of color values in the custom themes docs (#524)

--- a/package.json
+++ b/package.json
@@ -33,15 +33,16 @@
 		"postcss-media-minmax": "^5.0.0",
 		"prettier": "^3.0.2",
 		"prettier-plugin-svelte": "^3.0.3",
+		"rehype-color-preview": "^0.1.5",
 		"remark-gfm": "^3.0.1",
 		"remark-github": "^11.2.4",
 		"remark-slug": "^7.0.1",
-		"sass": "^1.66.0",
+		"sass": "^1.66.1",
 		"svelte": "^4.2.0",
 		"svelte-check": "^3.5.0",
 		"svelte-i18n": "^3.7.0",
 		"svelte-preprocess": "^5.0.4",
-		"tslib": "^2.6.1",
+		"tslib": "^2.6.2",
 		"typescript": "^5.1.6",
 		"unplugin-icons": "0.16.5",
 		"vite": "^4.4.9"
