--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"sass": "^1.67.0",
 		"svelte": "^4.2.0",
 		"svelte-check": "^3.5.1",
-		"svelte-i18n": "^3.7.3",
+		"svelte-i18n": "3.7.2",
 		"svelte-preprocess": "^5.0.4",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2",
