--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@neodrag/svelte": "^2.0.3",
 		"@sveltejs/adapter-cloudflare": "^4.1.0",
 		"@sveltejs/kit": "^2.5.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.1",
 		"@typescript-eslint/eslint-plugin": "^6.19.1",
 		"@typescript-eslint/parser": "^6.19.1",
 		"autoprefixer": "^10.4.17",
@@ -41,7 +42,6 @@
 		"svelte": "^4.2.9",
 		"svelte-check": "^3.6.3",
 		"svelte-i18n": "4.0.0",
-		"svelte-preprocess": "^5.1.3",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
 		"unplugin-icons": "0.18.2",
