--- a/package.json
+++ b/package.json
@@ -14,24 +14,21 @@
 	},
 	"devDependencies": {
 		"@fec/remark-a11y-emoji": "^4.0.2",
-		"@iconify-json/fluent": "^1.1.50",
+		"@iconify-json/fluent": "^1.1.51",
 		"@neodrag/svelte": "^2.0.3",
 		"@sveltejs/adapter-cloudflare": "^4.2.0",
 		"@sveltejs/kit": "^2.5.4",
 		"@sveltejs/vite-plugin-svelte": "^3.0.2",
-		"@typescript-eslint/eslint-plugin": "^7.2.0",
-		"@typescript-eslint/parser": "^7.2.0",
-		"autoprefixer": "^10.4.18",
-		"cssnano": "^6.1.0",
+		"@typescript-eslint/eslint-plugin": "^7.4.0",
+		"@typescript-eslint/parser": "^7.4.0",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
 		"fluent-svelte": "^1.6.0",
 		"husky": "^9.0.11",
+		"lightningcss": "^1.24.1",
 		"lint-staged": "^15.2.2",
 		"mdsvex": "^0.11.0",
-		"postcss": "^8.4.35",
-		"postcss-media-minmax": "^5.0.0",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.2",
 		"rehype-color-preview": "^0.1.5",
@@ -40,20 +37,20 @@
 		"remark-slug": "^7.0.1",
 		"sass": "^1.72.0",
 		"svelte": "^4.2.12",
-		"svelte-check": "^3.6.7",
+		"svelte-check": "^3.6.8",
 		"svelte-i18n": "4.0.0",
 		"svelte-preprocess": "^5.1.3",
 		"tslib": "^2.6.2",
-		"typescript": "^5.4.2",
+		"typescript": "^5.4.3",
 		"unplugin-icons": "0.18.5",
-		"vite": "^5.1.6"
+		"vite": "^5.2.6"
 	},
 	"lint-staged": {
 		"*": "prettier --write --ignore-unknown --plugin-search-dir=."
 	},
 	"engines": {
 		"pnpm": ">=8",
-		"node": ">=18"
+		"node": ">=20"
 	},
 	"type": "module"
 }
