--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --ignore-unknown --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --write --ignore-unknown --plugin-search-dir=. .",
-		"prepare": "husky install"
+		"prepare": "husky"
 	},
 	"devDependencies": {
 		"@fec/remark-a11y-emoji": "^4.0.2",
-		"@iconify-json/fluent": "^1.1.51",
-		"@neodrag/svelte": "^2.0.3",
-		"@sveltejs/adapter-cloudflare": "^4.2.1",
+		"@iconify-json/fluent": "^1.1.52",
+		"@neodrag/svelte": "^2.0.4",
+		"@sveltejs/adapter-cloudflare": "^4.3.0",
 		"@sveltejs/kit": "^2.5.5",
-		"@sveltejs/vite-plugin-svelte": "^3.0.2",
-		"@typescript-eslint/eslint-plugin": "^7.5.0",
-		"@typescript-eslint/parser": "^7.5.0",
-		"eslint": "^8.57.0",
+		"@sveltejs/vite-plugin-svelte": "^3.1.0",
+		"@types/eslint": "^8.56.8",
+		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.35.1",
+		"eslint-plugin-svelte": "^2.37.0",
 		"fluent-svelte": "^1.6.0",
+		"globals": "^15.0.0",
 		"husky": "^9.0.11",
 		"lightningcss": "^1.24.1",
 		"lint-staged": "^15.2.2",
@@ -36,12 +36,13 @@
 		"remark-github": "^12.0.0",
 		"remark-slug": "^7.0.1",
 		"sass": "^1.74.1",
-		"svelte": "^4.2.12",
+		"svelte": "^4.2.13",
 		"svelte-check": "^3.6.9",
 		"svelte-i18n": "4.0.0",
 		"svelte-preprocess": "^5.1.3",
 		"tslib": "^2.6.2",
-		"typescript": "^5.4.4",
+		"typescript": "^5.4.5",
+		"typescript-eslint": "^7.6.0",
 		"unplugin-icons": "0.18.5",
 		"vite": "^5.2.8"
 	},
