--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
 		"preview": "svelte-kit preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check --ignore-unknown --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"lint": "prettier --check --ignore-unknown --plugin-search-dir=. . && eslint --ignore-pattern .gitignore .",
 		"format": "prettier --write --ignore-unknown --plugin-search-dir=. .",
 		"prepare": "husky"
 	},
 	"devDependencies": {
 		"@fec/remark-a11y-emoji": "^4.0.2",
-		"@iconify-json/fluent": "^1.1.56",
+		"@iconify-json/fluent": "^1.1.57",
 		"@neodrag/svelte": "^2.0.6",
-		"@sveltejs/adapter-cloudflare": "^4.4.1",
-		"@sveltejs/kit": "^2.5.11",
+		"@sveltejs/adapter-cloudflare": "^4.5.0",
+		"@sveltejs/kit": "^2.5.17",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/eslint": "^8.56.10",
-		"eslint": "^9.4.0",
+		"eslint": "^9.5.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.39.3",
+		"eslint-plugin-svelte": "^2.40.0",
 		"fluent-svelte": "^1.6.0",
-		"globals": "^15.4.0",
+		"globals": "^15.6.0",
 		"husky": "^9.0.11",
 		"lightningcss": "^1.25.1",
 		"lint-staged": "^15.2.7",
@@ -35,14 +35,14 @@
 		"remark-gfm": "^4.0.0",
 		"remark-github": "^12.0.0",
 		"remark-slug": "^7.0.1",
-		"sass": "^1.77.5",
+		"sass": "^1.77.6",
 		"svelte": "^4.2.18",
-		"svelte-check": "^3.8.0",
+		"svelte-check": "^3.8.1",
 		"svelte-i18n": "4.0.0",
-		"svelte-preprocess": "^6.0.0",
+		"svelte-preprocess": "^6.0.1",
 		"tslib": "^2.6.3",
 		"typescript": "^5.4.5",
-		"typescript-eslint": "^7.13.0",
+		"typescript-eslint": "^7.13.1",
 		"unplugin-icons": "0.19.0",
 		"vite": "^5.3.1"
 	},
