i may just give up on messages

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,5 @@
 {
 	"useTabs": true,
 	"arrowParens": "avoid",
-	"plugins": ["prettier-plugin-svelte"]
+	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"]
 }
