--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"lint-staged": "^15.2.7",
 		"mdsvex": "^0.11.2",
 		"prettier": "^3.3.2",
+		"prettier-plugin-tailwindcss": "^0.6.4",
 		"prettier-plugin-svelte": "^3.2.5",
 		"rehype-color-preview": "^0.1.5",
 		"remark-gfm": "^4.0.0",
@@ -44,7 +45,9 @@
 		"typescript": "^5.5.2",
 		"typescript-eslint": "^7.13.1",
 		"unplugin-icons": "0.19.0",
-		"vite": "^5.3.1"
+		"vite": "^5.3.1",
+		"tailwindcss": "^3.4.4",
+		"autoprefixer": "^10.4.19"
 	},
 	"lint-staged": {
 		"*": "prettier --write --ignore-unknown --plugin-search-dir=."
@@ -53,5 +56,6 @@
 		"pnpm": ">=9",
 		"node": ">=20"
 	},
-	"type": "module"
+	"type": "module",
+	"packageManager": "pnpm@8.8.0+sha1.9922e8b650d393700209ccd81e0ebdbcbe43b0d3"
 }
