--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"rehype-color-preview": "^0.1.5",
 		"remark-gfm": "^4.0.0",
 		"remark-github": "^12.0.0",
-		"remark-slug": "^8.0.0",
+		"rehype-slug": "^6.0.0",
 		"sass": "^1.79.5",
 		"svelte": "^4.2.19",
 		"svelte-check": "^4.0.4",
