--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
 	"i18n-ally.localesPaths": ["src/i18n/locales"],
-	"i18n-ally.keystyle": "nested"
+	"i18n-ally.keystyle": "nested",
+	"cSpell.words": ["Omnibar"]
 }
