--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"@fec/remark-a11y-emoji": "^4.0.2",
 		"@iconify-json/fluent": "^1.2.4",
 		"@neodrag/svelte": "^2.0.6",
-		"@sveltejs/adapter-cloudflare": "^4.7.3",
+		"@sveltejs/adapter-cloudflare": "^4.9.0",
 		"@sveltejs/kit": "^2.49.2",
 		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@types/eslint": "^9.6.1",
@@ -51,14 +51,11 @@
 	},
 	"pnpm": {
 		"overrides": {
-			"node-forge": ">=1.3.2",
-			"validator": ">=13.15.22",
-			"esbuild": ">=0.25.0",
 			"prismjs": ">=1.30.0",
-			"nanoid": ">=3.3.8",
-			"brace-expansion": ">=2.0.2",
-			"@eslint/plugin-kit": ">=0.3.4",
-			"cookie": ">=0.7.0"
+			"esbuild": ">=0.25.0",
+			"cookie": ">=0.7.0",
+			"vite-plugin-dts": ">=4.5.4",
+			"vite": ">=5.4.21"
 		}
 	},
 	"engines": {
